[tool.poetry]
name = "repl-nix-cctcalculator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_cctcalculator"}]

[tool.poetry.dependencies]
python = "^3.10"
mymathfoo1 = "^0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
